--- a/templates/contents/list_fitness.html
+++ b/templates/contents/list_fitness.html
@@ -43,7 +43,7 @@
             {% for subject in query %}
             <div class="row">
                 <div class="col">
-                    <div class="card mb-3">
+                    <div class="card mb-3" style="height:11rem;" >
                         <div class="row">
                             <div class="col-md-4">
                                 <a href="{% url 'subject' subject.id %}">
