--- a/templates/contents/cart.html
+++ b/templates/contents/cart.html
@@ -2,14 +2,22 @@
 {% load static %}
 {%block content%}
 
+<div class="d-flex p-2 bg-dark justify-content-start">
+   
+    <div class='col-sm-2'></div>
+    <div class='col-sm-2 text-light text-start'>
+        <h2>My cart</h2></div>
+     
+</div>
+
 <div class="container">
-    <div class="row mt-3">
+    <div class="row mt-3 justify-content-center">
 
         <div class="col-9">
             {% for subject in cart %}
             <div class="row">
                 <div class="col">
-                    <div class="card mb-3">
+                    <div class="card mb-3" style="height:11rem;">
                         <div class="row">
                             <div class="col-md-4">
                                 <a href="{% url 'subject' subject.subject.id %}">
@@ -22,7 +30,8 @@
                                     </figure>
                                 </a>
                             </div>
-                            <div class="col-md-8">
+
+                            <div class="col-md-5">
                                 <div class="row mt-3">
                                     <div class="col">
                                         <h5 class="card-title">{{subject.subject.title}}</h5>
@@ -48,24 +57,23 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col">
+                              
                                         <strong>Transactions: </strong> {{subject.subject.transactions}}
-                                    </div>
-                                </div>
                             </div>
 
-<a href="{% url 'delete_from_cart' subject.id %}">
-    <input type="submit" value="Delete" class="btn btn-sm btn-block btn-outline-dark">
-</a>
+                            <div class="col-2 p-2 align-self-center">
+                            <a href="{% url 'delete_from_cart' subject.id %}">
+                            <input type="submit" value="Remove" class="btn btn-block btn-outline-dark">
+                            <!-- <i class="fas fa-trash-alt"></i> -->
+                            <!-- <i class="fa fa-trash" aria-hidden="true"></i> -->
+                            </a>
+                            </div>
 
-
-                        </div>
+                        </div>          
                     </div>
                 </div>
             </div>
             {% endfor %}
-
         </div>
     </div>
 
