--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -137,6 +137,37 @@
   
 <!-- ============================================================= -->
 
+    <div class="row mt-3 border rounded bg-light text-center">
+        <h5>Create new section</h5>
+    </div>
+    <div class="row mt-2 pb-3 border rounded">
+    
+        <form action="{% url 'create_new_section' subject.id %}" method="POST">
+            {% csrf_token %}
+    
+            <div class="form-row">
+                <div class="col-3">
+                    <label for="title">
+                        <h5>Add new section:</h5>
+                    </label>
+                    <input class='form-control' type="text" id="title" name="title" placeholder="Section Title" required>
+                </div>
+    
+                <div class="col-2 align-self-end">
+                    <!-- <button type='submit' value="Create" class="btn btn-info btn-block"> -->
+                    <!-- <input type="submit" value="Create" class="btn btn-info btn-block "> -->
+                    <input type="submit" value="Create" class='btn btn-sm btn-block btn-outline-dark'>
+                    <input type="reset" value="Clear" class="btn btn-sm btn-block btn-outline-dark">
+                </div>
+            </div>
+    </div>
+    </form>
+    
+    </div>
+    </div>
+
+
+<!-- =================================================================== -->
     
 
 
