Edited Section Function

--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -211,8 +211,14 @@
         
     </div>
 </div>
-                    
+        <!-- =====================Sections============================================== -->
+        {% for section in sections %}
 
+
+
+
+
+        {% endfor %}
     <!-- ====================================================================== -->
 
 
