Added Cart Secturity

--- a/templates/contents/cart.html
+++ b/templates/contents/cart.html
@@ -62,7 +62,7 @@
                             </div>
 
                             <div class="col-2 p-2 align-self-center">
-                            <a href="{% url 'delete_from_cart' subject.id %}">
+                            <a href="{% url 'delete_from_cart' subject.subject.id %}">
                             <input type="submit" value="Remove" class="btn btn-block btn-outline-dark">
                             <!-- <i class="fas fa-trash-alt"></i> -->
                             <!-- <i class="fa fa-trash" aria-hidden="true"></i> -->
