--- a/templates/mycourses/mycourses.html
+++ b/templates/mycourses/mycourses.html
@@ -42,7 +42,7 @@
             
                         <div class="row">
                             <div class="col">
-                                <strong>Transactions:</strong> {{course.course.transactions}}
+                                <strong>Date of purchase:</strong> {{course.date_bought}}
                             </div>
                         </div>
                     </div>
