--- a/templates/workshop/author_page.html
+++ b/templates/workshop/author_page.html
@@ -3,7 +3,6 @@
 
 <div class="container">
 <div class="row mt-3">
-
     <div class="col-6">
       <div class="row m-auto">
         <div class="col">
@@ -34,8 +33,8 @@
               <h3 class='modal-title'>Edit your info</h3>
               <button class="close" data-dismiss='modal'>&times;</button>
             </div>
-              <div class="modal-body">
 
+          <div class="modal-body">
           <div class="row">
             <div class="col-12 m-auto">
                 <form action="{% url 'edit_author_page' request.user.id %}" method="POST" enctype="multipart/form-data">
@@ -82,21 +81,81 @@
  
     {% endif %}
     </div>
-<!-- =========================================================        -->
+<!-- ========================Instructor Image =================================        -->
     <div class="col-6">
+        <!-- <figure class="image is-1by1"> -->
+          <img src="{{author.photo.url}}" alt="Placeholder image" class='rounded-circle mx-auto d-block' style='width: 15rem; height: 15rem;' >
+        <!-- </figure> -->
+    </div>   
+</div>
+
     
-        <figure class="image is-1by1">
-          <img src="{{author.photo.url}}" alt="Placeholder image" class='rounded-circle mx-auto d-block' style='width:20rem; height: 20rem;' >
+<div class="row mt-5">
+  {% for subject in subjects %} 
+  <div class="col-sm-3">
+    <div class="card mb-3" style="border-color: transparent;">
+      <!-- <div class="p-2"> -->
+      <div class="card-header" style='height:4rem'>
+        <h5>{{subject.title}}</h5>
+      </div>
+  
+      <a href="{% url 'subject' subject.id %}">
+        <!-- <figure class="image is-4by3"> -->
+        <figure class="image is-16by9">
+          <img src="{{subject.thumbnail_file.url}}" alt="Placeholder image" class='rounded-2 img-fluid'>
           <!-- <img src="{{subject.thumbnail_file.url}}" alt="Placeholder image"  class='card-image-top' style='width:18rem; height: 10rem;'> -->
         </figure>
+      </a>
+      <div class="card-body">
+        <!-- <div class="media ml-1">
+                          <p class="title is-6" style="height:10px">{{subject.title}}</p>
+                      </div> -->
+        <div class="row">
+          <div class="col"><strong>Created by:</strong>
+            {{subject.author}}
+          </div>
+        </div>
+        <div class="row">
+          <div class="col"><strong>Date posted: </strong>{{subject.date_posted}}</div>
+        </div>
+  
+        <div class="row">
+          <div class="col">
+            <strong>
+              Rating:
+            </strong> {{subject.av_rating}}
+            <div class="stars-outer">
+              <div class="stars-inner" style="width: {{subject.percent}}"></div>
+            </div>
+          </div>
+        </div>
+  
+        <div class="row">
+          <div class="col">
+            <strong>Transactions:</strong> {{subject.transactions}}
+          </div>
+        </div>
+        {% if subject.discount_programs == True and discount_time.discount_on == True %}
+        <div class="row">
+          <div class="col">
+            <strong>Price:</strong> {{subject.price.discount}} USD
+          </div>
+        </div>
+        {% else %}
+        <div class="row">
+          <div class="col">
+            <strong>Price:</strong> {{subject.price.regular}} USD
+          </div>
+        </div>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+  
+  {% endfor %}
+</div>
 
-    </div>
-      
-    </div>
 
-    <div class="row">
-      
-    </div>
 </div>
 
 {% endblock %}
