--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -70,8 +70,19 @@
                                     </label>
                                     <input type="file" class="form-control" id="video_file" name="video_file" required>
                                 </div>
-                
-                
+                                <div class="col-3">
+                                    <label for="subtitle_file">
+                                        <h5>Load subtitiles:</h5>
+                                    </label>
+                                    <input type="file" class="form-control" id="subtitle_file" name="subtitle_file">
+                                </div>
+                                <div class="col-3">
+                                    <label for="subtitle_file">
+                                        <h5>Load translation:</h5>
+                                    </label>
+                                    <input type="file" class="form-control" id="translation_file" name="translation_file">
+                                </div>
+
                                 <div class="col-3 align-self-end ml-5">
                                     <input type="checkbox" id='free_access' class='form-check-input' name='free_access'
                                         value='free_access'>
