--- a/templates/video.html
+++ b/templates/video.html
@@ -1,70 +1,75 @@
 {% extends 'base.html' %}
 {% load humanize %}
-
 {% block content %}
+<body oncontextmenu="return false">
+<head>
+    <script>
+        var vid, playbtn, seekslider;
+
+        function initializePlayer() {
+            //Set object references
+            vid = document.getElementById("my_video");
+            playbtn = document.getElementById("playpausebtn");
+            seekslider = document.getElementById("seekslider");
+            //Add event listeners
+            playbtn.addEventListener("click", playPause, false);
+            seekslider.addEventListener("change", vidSeek, false);
+            vid.addEventListener("timeupdate", seektimeupdate, false);
+
+        }
+        window.onload = initializePlayer;
+
+        function playPause() {
+            if (vid.paused) {
+                vid.play();
+                playbtn.innerHTML = 'Pause';
+            }
+            else {
+                vid.pause();
+                playbtn.innerHTML = 'Play';
+            }
+        }
+
+        function vidSeek() {
+            var seekto = vid.duration*(seekslider.value/100);
+            vid.currentTime = seekto;
+        }
+
+        function seektimeupdate() {
+            var nt = vid.currentTime * (100 / vid.duration);
+            seekslider.value = nt;
+           }
+
+    </script>
+
+</head>
+<body>
+
 <div class="container">
+    <div class="row">
+        <div class="col-10">
     <div class="card">
         <div class="card-header">
-            <h4>{{the_video.title}}</h4>
+            <h4>{{the_video.title}} {{the_video.date_posted|naturaltime}} </h4>
+
         </div>
         
-  
-    <!-- <section class="section"> -->
-        
-            <!-- Main container -->
-            <!-- <nav class="level"> -->
-                <!-- Left side -->
-                <!-- <div class="level-left">
-                    <div class="level-item"> -->
-                        <!-- <h1 class="title">{{the_video.title}}</h1> -->
-                <!-- </div> -->
-    
-                <!-- Right side -->
-                <!-- <div class="level-right">
-                        <p class="level-item">
-                            <strong>{{the_video.date_posted|naturaltime}}</strong>
-                        </p>
-                    </div> -->
-            <!-- </nav> -->
-    
-       
-    <!-- </section> -->
-
-    <!-- <section class="section">
-        <div class="container"> -->
-        <!-- <video controls> -->
+      
+        <!-- <div id ="video_player_box"> -->
         <!-- <video oncontextmenu="return false;" width="320" height="240" controls controlsList="nodownload"> -->
-        <video oncontextmenu="return false;" controls controlsList="nodownload">
-            <source src="{{the_video.video_file.url}}" type="video/mp4">
+        <video id ="my_video" controls>
+            <source src="{{the_video.video_file.url}}" type="video/mp4" >
+            <track kind='subtitles' srclang="en" label='English' default />
         </video>
-        <!-- </div>
-    </section> -->
+        <div id='video_controls_bar'>
+            <button id='playpausebtn'>Play</button>
+            <input type="range" id="seekslider" min="0" max="100" value="0" step="1" style="width:500px">
 
-
-
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <form action="" method="POST">
-                    {% csrf_token %}
-                    <label for="content">Enter your comment</label>
-                    <input type="text" id="content" name="content">
-                    <button type="submit">Publish</button>
-                </form>
-            </div>
         </div>
-        {% for comment in comments %}
-        <div class="row">
-            <div class="col-sm-3">
-                {{comment.author}}
-            </div>
-            <div class="col-sm-9">
-                {{comment.content}}
-            </div>
-        </div>
-        {% endfor %}
-    </div> -->
-  
-</div>
-</div>
+        
+        
+    </div>
+    </div>
+    </body>
+<
 {% endblock %}
