--- a/templates/video.html
+++ b/templates/video.html
@@ -1,23 +1,21 @@
 {% extends 'base.html' %}
 {% load humanize %}
 {% block content %}
-<body oncontextmenu="return false">
+<!-- <body oncontextmenu="return false"> -->
 <head>
-    <script>
-        var vid, playbtn, seekslider;
-
-        function initializePlayer() {
-            //Set object references
-            vid = document.getElementById("my_video");
-            playbtn = document.getElementById("playpausebtn");
-            seekslider = document.getElementById("seekslider");
+<!-- <script>
+    var vid, playbtn, seekslider;
+    function initializePlayer() {
+    //Set object references
+        vid = document.getElementById("my_video");
+        playbtn = document.getElementById("playpausebtn");
+        seekslider = document.getElementById("seekslider");
             //Add event listeners
-            playbtn.addEventListener("click", playPause, false);
-            seekslider.addEventListener("change", vidSeek, false);
-            vid.addEventListener("timeupdate", seektimeupdate, false);
-
+        playbtn.addEventListener("click", playPause, false);
+        seekslider.addEventListener("change", vidSeek, false);
+        vid.addEventListener("timeupdate", seektimeupdate, false);
         }
-        window.onload = initializePlayer;
+    window.onload = initializePlayer;
 
         function playPause() {
             if (vid.paused) {
@@ -29,7 +27,6 @@
                 playbtn.innerHTML = 'Play';
             }
         }
-
         function vidSeek() {
             var seekto = vid.duration*(seekslider.value/100);
             vid.currentTime = seekto;
@@ -39,11 +36,71 @@
             var nt = vid.currentTime * (100 / vid.duration);
             seekslider.value = nt;
            }
+    </script> -->
 
-    </script>
+    <script>
+//================================= Player Controls=================================== -->
+var video, playBtn, progressBar, currentTime, duration;
+function initializePlayer() {
 
+    video = document.getElementById('video');
+    playBtn = document.getElementById('play-btn');
+    progressBar = document.querySelector('.progress-bar');
+    currentTime = document.querySelector('.time-elapsed');
+    duration = document.querySelector('.time-duration');
+    //const progressRange = document.querySelector('.progress-range');
+    //const volumeRange = document.querySelector('volume-range');
+    //const volumeBar = document.querySelector('volume-bar');
+    //const fullscreenBtn = document.querySelector('.fullscreen');
+
+    // Event Listenters====================== -->
+    playBtn.addEventListener('click', togglePlay, false);
+    video.addEventListener('click', togglePlay, false);
+    video.addEventListener('ended', showPlayIcon, false);
+    video.addEventListener('timeupdate', updateProgress, false);
+    video.addEventListener('canplay', updateProgress, false);
+    }
+   window.onload = initializePlayer;
+
+//Play & Pause=============== -->
+function showPlayIcon(){
+    playBtn.classList.replace('fa-pause', 'fa-play');
+    playBtn.setAttribute('title', 'Play');
+}
+
+function togglePlay() {
+    if (video.paused) {
+        video.play();
+        playBtn.classList.replace('fa-play', 'fa-pause');
+        playBtn.setAttribute('title', 'Pause');
+
+        }
+    else {
+        video.pause();
+        showPlayIcon();
+        }
+}
+//Calculate display time format
+function displayTime(time) {
+    const minutes = Math.floor(time / 60);
+    let seconds = Math.floor (time % 60);
+    seconds = seconds > 9 ? seconds : `0${seconds}`;
+    console.log (minutes, seconds);
+    return `${minutes}:${seconds}`;
+}
+
+//Update progress bar as video plays
+function updateProgress(){
+    console.log('currentTime', video.currentTime, 'duration', video.duration);
+    progressBar.style.width = `${(video.currentTime / video.duration) * 100}%`;
+    //displayTime(64);
+    currentTime.textContent =`${displayTime(video.currentTime)} /`;
+    duration.textContent = `${displayTime(video.duration)}`;
+}
+
+</script>
 </head>
-<body>
+
 
 <div class="container">
     <div class="row">
@@ -54,22 +111,79 @@
 
         </div>
         
-      
-        <!-- <div id ="video_player_box"> -->
+
+    <div class="player">
+            <video src="{{the_video.video_file.url}}" id="video" playsinline>
+            <!-- <track kind='subtitles' srclang="ru" src={{the_video.subtitle_file.url}} label='Russian' width='50' height='30'
+                default /> -->
+            </video>
+
+        <div class="show-controls">
+        <div class="controls-container">
+            <div class="progress-range" title="Seek">
+                <div class="progress-bar"></div>
+            </div>
+            <div class="control-group">
+            <div class="controls-left">
+                    <div class="play-controls">
+                        <i class="fas fa-play" title="Play" id='play-btn'></i>
+                    </div>
+                
+                <div class="volume">
+                    <div class="volume-icon">
+                        <i class="fas fa-volume-up" title="Mute" id='volume-icon'></i>
+                    </div>
+                    <div class="volume-range" title="Change Volume">
+                        <div class="volume-bar">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="controls-right">
+                <div class="speed" title="Playback Rate">
+                    <select name="playbackRate" class="player-speed">
+                        <option value="0.5">0.5 x</option>
+                        <option value="0.75">0.75 x</option>
+                        <option value="1" selected>1 x</option>
+                        <option value="1.25">1.25 x</option>
+                        <option value="1.5">1.5 x</option>
+                    </select>
+                </div>
+
+                <div class="time">
+                    <span class="time-elapsed">00:00 /</span>
+                    <span class="time-duration">2:38/</span>
+                </div>
+
+                <div class="fullscreen">
+                    <i class="fas fa-expand"></i>
+                </div>
+            </div>
+                
+            </div>
+        </div>
+    </div>
+    </div>
         <!-- <video oncontextmenu="return false;" width="320" height="240" controls controlsList="nodownload"> -->
-        <video id ="my_video" controls>
+
+    <!-- =====================working player=========================== -->
+        <!-- <video id ="my_video" controls controlslist=nodownload>
             <source src="{{the_video.video_file.url}}" type="video/mp4" >
-            <track kind='subtitles' srclang="en" label='English' default />
-        </video>
+            <track kind='subtitles' srclang="ru" src={{the_video.subtitle_file.url}} label='Russian' width='50' height='30' default />
+            
+           
+        
         <div id='video_controls_bar'>
             <button id='playpausebtn'>Play</button>
             <input type="range" id="seekslider" min="0" max="100" value="0" step="1" style="width:500px">
-
         </div>
-        
+      
+        </video> -->
+        <!-- =========================end of working player============================= -->
         
     </div>
     </div>
-    </body>
+  
 <
 {% endblock %}
