--- a/project/static/style.css
+++ b/project/static/style.css
@@ -153,20 +153,21 @@ video {
 /* Progress Bar */
 .progress-range {
   height: 8px;
-  width: 100%;
-  width: calc (100% - 30px);
-  background:rgba(255, 255, 255, 0.5)
-  margin: auto;
+  width: 95%;
+  /* width: calc (100% - 100px); */
+  /* background:rgba(255, 255, 255, 0.5) */
+  background: grey;
+  /* margin: auto; */
   border-radius: 10px;
   position: absolute;
-  top: 15px;
+  top: 5px;
   left: 15px;
   cursor: pointer;
   transition: height 0.1s ease-in-out;
 }
 
 .progress-range:hover{
-  height: 10px;
+  height: 12px;
 }
 
 .progress-bar {
@@ -175,7 +176,7 @@ video {
   width: 50%;
   height: 100%;
   border-radius: 10px;
-  transition: all 0.5s ease;
+  /* transition: all 0.5s ease; */
   cursor: pointer;
 }
 
@@ -302,6 +303,16 @@ select > option {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+}
+
+/* Subtitle */
+::cue {
+  font-size: 20px;
+  font-family: Georgia, serif;
+  color: red;
+  background-position: right;
+  opacity: 1;
+
 }
 
 /* Media Query: Large Smartphone (Vertical) */
