--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,14 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-   
+
+    <!-- VIDEOJS -->
+    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
+    
+    <link href= "https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-quality-levels/2.1.0/videojs-contrib-quality-levels.min.js" >
+
+    
+
 
 </head>
 
@@ -27,7 +34,6 @@
 
     {% block content %}
     {% endblock %}
-
     {% include 'partials/_footer.html' %}
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -43,11 +49,15 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="{% static 'main.js' %}" defer></script>
-
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
+
+<!-- VIDEOJS SCRIPTS -->
+    <script src="https://vjs.zencdn.net/7.11.4/video.js"></script>
+
+
   
 </body>
 
